# bibleshowpro

./: .gitignore  README.md  index.html  output.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
database/: schema.sql
database/catalog/: translations.json
database/seed/: kjv-sample.json
e2e/: app.spec.ts
scripts/: fetch-bible-sources.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: display.rs  keep_awake.rs  lib.rs  main.rs  output.rs
src-tauri/src/bible/: books.rs  catalog.rs  convert.rs  detection.rs  import.rs  install.rs  mod.rs  parser.rs  search.rs  search_query.rs
src-tauri/src/commands/: bible.rs  mod.rs  ndi.rs  songs.rs  transcription.rs
src-tauri/src/db/: migrations.rs  mod.rs  seed.rs
src-tauri/src/ndi/: config.rs  engine.rs  mod.rs
src-tauri/src/service/: mod.rs
src-tauri/src/songs/: mod.rs
src-tauri/src/transcription/: mod.rs
src/components/: ErrorBoundary.tsx
src/engine/: broadcast.ts  liveOutput.ts  previewProgram.ts  scene.test.ts  scene.ts
src/hooks/: useLiveKeyboard.ts  useOutputDisplayManager.ts
src/lib/: bibleBooks.ts  bibleCompare.ts  bibleLanguages.ts  exportPdf.ts  importMedia.ts  lowerThird.ts  mediaLive.ts  mediaUrl.ts  ndiConfig.ts  serviceItemContent.ts  serviceLive.ts  serviceTemplates.ts  songLive.ts  songTypes.ts  tauri.ts  themeConfig.ts  transcriptionLive.ts  utils.test.ts  utils.ts  vectorDesign.ts
src/output/: main.tsx
(+79 files in other folders)
